# bmd-signal-gen

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  PROJECT_SUMMARY.md  README.md  REQUIREMENTS.md  bmd_signal_gen.py  cspell.json  pyproject.toml  tasks.py
.cursor/rules/: coding-standards.mdc  minimize-sycophancy.mdc
.memories/: DesktopVideoSDKManual.md  PROJECT_SUMMARY.md
bmd_sg/: __init__.py  api.py  decklink_control.py  pattern_generator.py  patterns.py  py.typed  signal_generator.py  signal_settings.py
bmd_sg/api/: CLAUDE.md  __init__.py  device_manager.py  main.py  models.py
bmd_sg/charts/: __init__.py  color_types.py  conversion.py  renderer.py  tiff_reader.py  tiff_writer.py
bmd_sg/charts/loaders/: __init__.py  yaml_chart.py
bmd_sg/cli/: CLAUDE.md  __init__.py  main.py  shared.py
bmd_sg/cli/commands/: __init__.py  api_server.py  checkerboard_commands.py  device_details.py  display_tiff.py  gen_chart.py  solid.py
bmd_sg/decklink/: CLAUDE.md  __init__.py  bmd_decklink.py  decklink_types.py
bmd_sg/decklink/mock/: __init__.py  mock_decklink.py
bmd_sg/image_generators/: CLAUDE.md  __init__.py  checkerboard.py
bmd_sg/scripts/: __init__.py  bmd_signal_gen.py  bmd_signal_gen2.py  four_pattern_demo.py  performance_test.py  show_image.py
bmd_sg/utilities/: CLAUDE.md  __init__.py
bmd_signals/: api.py  decklink_control.py
bmd_signals/scripts/: bmd_signal_gen.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  PIXEL_PACKING.md  PIXEL_PACKING_DOCUMENTATION.md  decklink_wrapper.cpp  decklink_wrapper.h  draw_image.cpp  draw_image.h  pixel_packing.cpp  pixel_packing.h
data/: luminance_ramp_cdm2.yaml  luminance_ramp_cv.yaml  luminance_ramp_pq_log.yaml  smpte_bars_75.yaml
docs/source/: api_guide.rst  architecture.rst  cli_usage.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: bmd_sg.cli.rst  bmd_sg.decklink.rst  bmd_sg.image_generators.rst  bmd_sg.utilities.rst
examples/: CLAUDE.md  __init__.py  api_pattern_demo.py  four_pattern_demo.py  performance_test.py  test_with_mocks_demo.py
lib/: bmd_decklink.py
postman/collections/: 21048489-1c2a6d5e-5f7d-45c4-940b-eeb2c52a254e.json
src/bmdsignalgen/: api.py  decklink_control.py  patterns.py
tests/: conftest.py  test_decklink.py  test_pattern_generator.py  test_patterns.py
