[project]
name = "bmd-signal-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "uvicorn>=0.35.0",
    "typer>=0.16,<0.17",
    "rich>=14.0.0",
    "aenum>=3.1.16",
]

[project.scripts]
bmd_signal_gen = "bmd_sg.scripts.bmd_signal_gen:main"
bmd_signal_gen2 = "bmd_sg.scripts.bmd_signal_gen2:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bmd_sg"]
include = ["LICENSE"]
exclude = ["data/", "cpp/", "tests/"]
